--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -20,6 +20,13 @@ h2 {
     color: #184f63; /* Dark blue */
 }
 
+.sharp-corners,
+.sharp-corners * {
+    border-radius: 0;
+}
+
+
+
 /* About Section */
 
 #about {
@@ -30,6 +37,20 @@ h2 {
 
 #portfolio {
     background-color: #dbdcde; /* Light grey */
+}
+
+#portfolio .card-title {
+    color: #1f7798; /* Mid blue */
+    font-size: 1.2rem;
+}
+
+#portfolio .btn-outline-secondary:hover {
+    background-color: #1f7798; /* Mid blue */
+}
+
+
+#portfolio .card-text {
+min-height: 120px;
 }
 
 /* Contact section */
@@ -47,4 +68,17 @@ background-size: cover;
 background-position: 50% 70%;
 min-height: 500px;
 padding: 5% 7%;
+}
+
+
+/* Media queries */
+
+
+/* Use Bootstrap breakpoint for XL screens */
+
+@media screen and (min-width: 1200PX) {
+    /* FIXES ALL PORTFOLIO CARDS BEING TOO TALL ON XL SCREENS */
+    #portfolio .card-text {
+        min-height: auto;
+    }
 }
